package.json update

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phillcode-picpay-nestjs",
+  "name": "teste-picpay-nestjs",
   "version": "0.0.1",
   "description": "",
   "author": "",
